# pytorch-template

./: pyproject.toml
pytorch_template/: main.py  train.py  trainer.py  utils.py
pytorch_template/architecture/: __init__.py  resnet18.py
pytorch_template/conf/: config.py  config.yaml
pytorch_template/conf/data/: aaa.yaml
pytorch_template/conf/model/: resnet18.yaml
pytorch_template/database/: __init__.py
pytorch_template/database/aaa/: aaa_dataset.py
