[tool.poetry]
name = "pytorch-template"
version = "0.1.0"
description = ""
authors = ["gajitaku-dendai <21aj112@ms.dendai.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.4.0+cu121", source = "torch_cu121"}
torchvision = {version = "^0.19.0+cu121", source = "torch_cu121"}
wandb = "^0.17.6"
hydra-core = "^1.3.2"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
tqdm = "^4.66.5"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
